--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 flask==2.3.3
-scikit-learn==1.2.2
+scikit-learn==1.3.2
 numpy==1.24.4
 scipy==1.10.1
-lime==0.2.0.1
 pandas==1.5.3
+lime==0.2.0.1
+# Optional:
+Cython<3
